add int id variable to FormVerb class

--- a/src/main/webapp/WEB-INF/views/apparatus/show.html
+++ b/src/main/webapp/WEB-INF/views/apparatus/show.html
@@ -8,6 +8,7 @@
   <h1>Show mast go on!!!</h1>
   <div th:each="verb : ${show}">
       <p th:text="${verb.getAllFormVerb()}">all form</p>
+      <a href="@{/apparatus/edit}"></a>
 
   </div>
   <a href="/apparatus/edit">EDIT</a>
