add new word page

--- a/src/main/webapp/WEB-INF/views/apparatus/new.html
+++ b/src/main/webapp/WEB-INF/views/apparatus/new.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Edit</title>
+    <title>New</title>
 </head>
 <body>
-  <div>
-    <h1>Edit Word</h1>
-      <form action=""></form>  
-  </div>
+  <h1>NEW</h1>
+  <form>
+
+  </form>
 </body>
 </html>
