--- a/src/main/webapp/WEB-INF/views/apparatus/index.html
+++ b/src/main/webapp/WEB-INF/views/apparatus/index.html
@@ -14,6 +14,8 @@
         <a href="/apparatus">NEXT</a>
         <hr>
         <a href="/apparatus/show">SHOW</a>
+        <hr>
+        <a href="/apparatus/new">NEW</a>
 
 
     </div>
