--- a/src/main/webapp/WEB-INF/views/apparatus/show.html
+++ b/src/main/webapp/WEB-INF/views/apparatus/show.html
@@ -7,10 +7,7 @@
 <body>
   <h1>Show mast go on!!!</h1>
   <div th:each="verb : ${show}">
-      <p th:text="${verb.getAllFormVerb()}">all form</p>
-      <a href="@{/apparatus/edit}"></a>
-
+      <a th:href="@{/apparatus/edit/{id}/(id=${verb.getId()})}" th:text="${verb.getAllFormVerb()}">all form</a>
   </div>
-  <a href="/apparatus/edit">EDIT</a>
 </body>
 </html>
