--- a/src/main/webapp/WEB-INF/views/apparatus/edit.html
+++ b/src/main/webapp/WEB-INF/views/apparatus/edit.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" >
 <head>
     <meta charset="UTF-8">
     <title>Edit</title>
@@ -7,7 +7,24 @@
 <body>
   <div>
     <h1>Edit Word</h1>
-      <form action=""></form>  
+      <form th:method="POST" th:action="/apparatus/edit/" th:object="${wordEdit}">
+          <label for="ua">Ua, Ru</label>
+          <input type="text" th:field="*{nameUa}" id="ua">
+          <hr>
+          <label for="infinitive">Infinitive</label>
+          <input type="text" th:field="*{infinitive}" id="infinitive">
+          <hr>
+          <label for="pastsimple">Past simple</label>
+          <input type="text" th:field="*{pastSimple}" id="pastsimple">
+          <hr>
+          <label for="pastparticiple">Past Participle</label>
+          <input type="text" th:field="*{pastParticiple}" id="pastparticiple">
+          <hr>
+          <label for="ing">Ing</label>
+          <input type="text" th:field="*{ing}" id="ing">
+          <hr>
+          <input type="submit" value="New word"/>
+      </form>
   </div>
 </body>
 </html>
