--- a/src/main/webapp/WEB-INF/views/apparatus/new.html
+++ b/src/main/webapp/WEB-INF/views/apparatus/new.html
@@ -1,13 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" >
 <head>
     <meta charset="UTF-8">
     <title>New</title>
 </head>
 <body>
   <h1>NEW</h1>
-  <form>
-
+  <form method="post" action="/apparatus/new">
+    <label for="ua">Ua, Ru</label>
+    <input type="text" name="" id="ua">
+    <hr>
+    <label for="infinitive">Infinitive</label>
+    <input type="text" name="" id="infinitive">
+    <hr>
+    <label for="pastsimple">Past simple</label>
+    <input type="text" name="" id="pastsimple">
+    <hr>
+    <label for="pastparticiple">Past Participle</label>
+    <input type="text" name="" id="pastparticiple">
+    <hr>
+    <label for="ing">Ing</label>
+    <input type="text" name="" id="ing">
+    <hr>
+    <input type="submit" value="New word"/>
   </form>
 </body>
 </html>
