--- a/src/main/webapp/WEB-INF/views/apparatus/show.html
+++ b/src/main/webapp/WEB-INF/views/apparatus/show.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" >
 <head>
     <meta charset="UTF-8">
     <title>Show</title>
@@ -7,7 +7,7 @@
 <body>
   <h1>Show mast go on!!!</h1>
   <div th:each="verb : ${show}">
-      <a th:href="@{/apparatus/edit/{id}/(id=${verb.getId()})}" th:text="${verb.getAllFormVerb()}">all form</a>
+      <a th:href="@{/apparatus/{id}/edit(id=${verb.getId()})}" th:text="${verb.getAllFormVerb()}">all form</a>
   </div>
 </body>
 </html>
